--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <header>
         <div class="container animated animatedFadeInUp fadeInUp">
             <div class="row d-flex justify-content-between">
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-2">
                     <a href="#"><img src="src/image/logo.png" alt="logo"></a>
                 </div>
-                <div class="col-lg-7 nav-fill">
-                    <nav>
+                <div class="col-lg-6 col-md-6 nav-fill">
+                    <nav class="col-lg-8 col-md-8">
                         <ul class="menu d-flex">
-                            <li>
+                            <li class="col-lg-3 col-md-3">
                                 <a href="#">Головна</a>
                             </li>
-                            <li>
+                            <li class="col-lg-3 col-md-3">
                                 <a href="#">Портфоліо</a>
                             </li>
 
-                            <li>
+                            <li class="col-lg-3 col-md-3">
                                 <a href="#">Блог</a>
                             </li>
 
-                            <li>
+                            <li class="col-lg-3 col-md-3">
                                 <a href="#">Про нас</a>
                             </li>
                         </ul>
@@ -412,26 +412,26 @@
                 <div class="col-lg-6 m-auto text-center">
                     <nav>
                         <ul class="d-flex justify-content-center">
-                            <li>
+                            <li class="col-lg-3s">
                                 <a href="#">Головна</a>
 
                             </li>
-                            <li>
+                            <li class="col-lg-3">
                                 <a href="#">Портфоліо</a>
                             </li>
 
-                            <li>
+                            <li class="col-lg-3">
                                 <a href="#">Блог</a>
                             </li>
 
-                            <li>
+                            <li class="col-lg-3">
                                 <a href="#">Про нас</a>
                             </li>
 
                         </ul>
                     </nav>
 
-                    <nav>
+                    <nav class="col-lg-8" style="margin: 0 auto;">
                         <ul class="d-flex justify-content-center">
                             <li> <a class="footer-social" href="#"><i class="fa fa-facebook"></i></a></li>
                             <li> <a class="footer-social" href="#"><i class="fa fa-twitter"></i></a></li>
