--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <nav class="col-lg-8 col-md-8">
                         <ul class="menu d-flex">
                             <li class="col-lg-3 col-md-3">
-                                <a href="#">Головна</a>
+                                <a href="#">ГОЛОВНА</a>
                             </li>
                             <li class="col-lg-3 col-md-3">
                                 <a href="#">Портфоліо</a>
@@ -393,10 +393,10 @@
             <div class="row d-block">
                 <div class="col-lg-7">
                     <h2>Чекаємо ваших заявок!</h2>
-                   
+
                 </div>
                 <div class="col-lg-5 d-flex justify-content-around">
-                  
+
                 </div>
             </div>
         </div>
