landing anims final version

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <nav class="col-lg-8 col-md-8">
                         <ul class="menu d-flex">
                             <li class="col-lg-3 col-md-3">
-                                <a href="#">ГОЛОВНА</a>
+                                <a href="#">Головна</a>
                             </li>
                             <li class="col-lg-3 col-md-3">
                                 <a href="#">Портфоліо</a>
